cmake_minimum_required(VERSION 3.4.1)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -ftemplate-depth=1024 -fvisibility=hidden -ffunction-sections -fdata-sections\
            -Wno-reserved-user-defined-literal -D__ANDROID_API__=23 \
            -fsigned-char -Wno-extern-c-compat -fexceptions")


set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fno-exceptions -fno-rtti -DGOOGLE_PROTOBUF_NO_RTTI")

set(CMAKE_CXX_STANDARD 14)

ADD_DEFINITIONS(-DDARWIN_NO_CARBON)
ADD_DEFINITIONS(-DFT2_BUILD_LIBRARY)
ADD_DEFINITIONS(-DSK_SUPPORT_ATLAS_TEXT)
ADD_DEFINITIONS(-DGR_TEST_UTILS)
#ADD_DEFINITIONS(-D__ARM_NEON)


#gm
add_library(gm STATIC
 skia/gm/aaa.cpp
  skia/gm/aaclip.cpp
  skia/gm/aarectmodes.cpp
  skia/gm/aaxfermodes.cpp
  skia/gm/addarc.cpp
  skia/gm/all_bitmap_configs.cpp
  skia/gm/alpha_image.cpp
  skia/gm/alphagradients.cpp
  skia/gm/animatedGif.cpp
  skia/gm/animatedimageblurs.cpp
  skia/gm/anisotropic.cpp
  skia/gm/annotated_text.cpp
  skia/gm/arcofzorro.cpp
  skia/gm/arcto.cpp
  skia/gm/arithmode.cpp
  skia/gm/atlastext.cpp
  skia/gm/badpaint.cpp
  skia/gm/beziereffects.cpp
  skia/gm/beziers.cpp
  skia/gm/bigblurs.cpp
  skia/gm/bigmatrix.cpp
  skia/gm/bigrect.cpp
  skia/gm/bigrrectaaeffect.cpp
  skia/gm/bigtext.cpp
  skia/gm/bigtileimagefilter.cpp
  skia/gm/bitmapcopy.cpp
  skia/gm/bitmapfilters.cpp
  skia/gm/bitmapimage.cpp
  skia/gm/bitmappremul.cpp
  skia/gm/bitmaprect.cpp
  skia/gm/bitmaprecttest.cpp
  skia/gm/bitmapshader.cpp
  skia/gm/bitmaptiled.cpp
  skia/gm/bleed.cpp
  skia/gm/blend.cpp
  skia/gm/blurcircles.cpp
  skia/gm/blurcircles2.cpp
  skia/gm/blurignorexform.cpp
  skia/gm/blurimagevmask.cpp
  skia/gm/blurquickreject.cpp
  skia/gm/blurrect.cpp
  skia/gm/blurredclippedcircle.cpp
  skia/gm/blurroundrect.cpp
  skia/gm/blurs.cpp
  skia/gm/blurtextsmallradii.cpp
  skia/gm/bmpfilterqualityrepeat.cpp
  skia/gm/bug5252.cpp
  skia/gm/bug6643.cpp
  skia/gm/bug6783.cpp
  skia/gm/bug530095.cpp
  skia/gm/bug615686.cpp
  skia/gm/cgms.cpp
  skia/gm/circle_sizes.cpp
  skia/gm/circles.cpp
  skia/gm/circulararcs.cpp
  skia/gm/circularclips.cpp
  skia/gm/clip_error.cpp
  skia/gm/clip_strokerect.cpp
  skia/gm/clipdrawdraw.cpp
  skia/gm/clippedbitmapshaders.cpp
  skia/gm/color4f.cpp
  skia/gm/coloremoji.cpp
  skia/gm/coloremoji_blendmodes.cpp
  skia/gm/colorfilteralpha8.cpp
  skia/gm/colorfilterimagefilter.cpp
  skia/gm/colorfilters.cpp
  skia/gm/colormatrix.cpp
  skia/gm/colorspacexform.cpp
  skia/gm/colorwheel.cpp
  skia/gm/complexclip.cpp
  skia/gm/complexclip_blur_tiled.cpp
  skia/gm/complexclip2.cpp
  skia/gm/complexclip3.cpp
  skia/gm/complexclip4.cpp
  skia/gm/composeshader.cpp
  skia/gm/concavepaths.cpp
  skia/gm/conicpaths.cpp
  skia/gm/constcolorprocessor.cpp
  skia/gm/convex_all_line_paths.cpp
  skia/gm/convexpaths.cpp
  skia/gm/convexpolyclip.cpp
  skia/gm/convexpolyeffect.cpp
  skia/gm/copyTo4444.cpp
  skia/gm/crbug_691386.cpp
  skia/gm/crbug_788500.cpp
  skia/gm/croppedrects.cpp
  skia/gm/crosscontextimage.cpp
  skia/gm/cubicpaths.cpp
  skia/gm/dashcircle.cpp
  skia/gm/dashcubics.cpp
  skia/gm/dashing.cpp
  skia/gm/degeneratesegments.cpp
  skia/gm/dftext.cpp
  skia/gm/dftext_blob_persp.cpp
  skia/gm/discard.cpp
  skia/gm/displacement.cpp
  skia/gm/distantclip.cpp
  skia/gm/downsamplebitmap.cpp
  skia/gm/draw_bitmap_rect_skbug4374.cpp
  skia/gm/drawable.cpp
  skia/gm/drawatlas.cpp
  skia/gm/drawatlascolor.cpp
  skia/gm/drawbitmaprect.cpp
  skia/gm/drawfilter.cpp
  skia/gm/drawlooper.cpp
  skia/gm/drawminibitmaprect.cpp
  skia/gm/drawregion.cpp
  skia/gm/drawregionmodes.cpp
  skia/gm/dropshadowimagefilter.cpp
  skia/gm/drrect.cpp
  skia/gm/drrect_small_inner.cpp
  skia/gm/dstreadshuffle.cpp
  skia/gm/emboss.cpp
  skia/gm/emptypath.cpp
  skia/gm/encode.cpp
  skia/gm/encode-alpha-jpeg.cpp
  skia/gm/encode-platform.cpp
  skia/gm/encode-srgb.cpp
  skia/gm/extractbitmap.cpp
  skia/gm/fadefilter.cpp
  skia/gm/fatpathfill.cpp
  skia/gm/filltypes.cpp
  skia/gm/filltypespersp.cpp
  skia/gm/filterbitmap.cpp
  skia/gm/filterbug.cpp
  skia/gm/filterfastbounds.cpp
  skia/gm/filterindiabox.cpp
  skia/gm/flippity.cpp
  skia/gm/fontcache.cpp
  skia/gm/fontmgr.cpp
  skia/gm/fontscaler.cpp
  skia/gm/fontscalerdistortable.cpp
  skia/gm/gamma.cpp
  skia/gm/gammaencodedpremul.cpp
  skia/gm/gammatext.cpp
  skia/gm/gamut.cpp
  skia/gm/getpostextpath.cpp
  skia/gm/giantbitmap.cpp
  skia/gm/glyph_pos.cpp
  skia/gm/glyph_pos_align.cpp
  skia/gm/gm.cpp
  skia/gm/gradient_matrix.cpp
  skia/gm/gradientDirtyLaundry.cpp
  skia/gm/gradients.cpp
  skia/gm/gradients_2pt_conical.cpp
  skia/gm/gradients_no_texture.cpp
  skia/gm/gradtext.cpp
  skia/gm/grayscalejpg.cpp
  skia/gm/hairlines.cpp
  skia/gm/hairmodes.cpp
  skia/gm/hardstop_gradients.cpp
  skia/gm/highcontrastfilter.cpp
  skia/gm/hittestpath.cpp
  skia/gm/hugepath.cpp
  skia/gm/hsl.cpp
  skia/gm/image.cpp
  skia/gm/image_pict.cpp
  skia/gm/image_shader.cpp
  skia/gm/imagealphathreshold.cpp
  skia/gm/imageblur.cpp
  skia/gm/imageblur2.cpp
  skia/gm/imageblurclampmode.cpp
  skia/gm/imageblurrepeatmode.cpp
  skia/gm/imageblurtiled.cpp
  skia/gm/imagefilters.cpp
  skia/gm/imagefiltersbase.cpp
  skia/gm/imagefiltersclipped.cpp
  skia/gm/imagefilterscropexpand.cpp
  skia/gm/imagefilterscropped.cpp
  skia/gm/imagefiltersgraph.cpp
  skia/gm/imagefiltersscaled.cpp
  skia/gm/imagefiltersstroked.cpp
  skia/gm/imagefilterstransformed.cpp
  skia/gm/imagefromyuvtextures.cpp
  skia/gm/imagemagnifier.cpp
  skia/gm/imagemakewithfilter.cpp
  skia/gm/imagemasksubset.cpp
  skia/gm/imageresizetiled.cpp
  skia/gm/imagescalealigned.cpp
  skia/gm/imagesource.cpp
  skia/gm/imagesource2.cpp
  skia/gm/internal_links.cpp
  skia/gm/inversepaths.cpp
  skia/gm/jpg_color_cube.cpp
  skia/gm/largeglyphblur.cpp
  skia/gm/lattice.cpp
  skia/gm/lcdblendmodes.cpp
  skia/gm/lcdoverlap.cpp
  skia/gm/lcdtext.cpp
  skia/gm/lighting.cpp
  skia/gm/linepaths.cpp
  skia/gm/localmatriximagefilter.cpp
  skia/gm/localmatriximageshader.cpp
  skia/gm/lumafilter.cpp
  skia/gm/makecolorspace.cpp
  skia/gm/makeRasterImage.cpp
  skia/gm/manypaths.cpp
  skia/gm/matrixconvolution.cpp
  skia/gm/matriximagefilter.cpp
  skia/gm/megalooper.cpp
  skia/gm/mipmap.cpp
  skia/gm/mixedtextblobs.cpp
  skia/gm/modecolorfilters.cpp
  skia/gm/morphology.cpp
  skia/gm/multipicturedraw.cpp
  skia/gm/nested.cpp
  skia/gm/ninepatchstretch.cpp
  skia/gm/nonclosedpaths.cpp
  skia/gm/occludedrrectblur.cpp
  skia/gm/offsetimagefilter.cpp
  skia/gm/orientation.cpp
  skia/gm/ovals.cpp
  skia/gm/overdrawcolorfilter.cpp
  skia/gm/OverStroke.cpp
  skia/gm/patch.cpp
  skia/gm/path_stroke_with_zero_length.cpp
  skia/gm/pathcontourstart.cpp
  skia/gm/patheffects.cpp
  skia/gm/pathfill.cpp
  skia/gm/pathinterior.cpp
  skia/gm/pathmaskcache.cpp
  skia/gm/pathopsinverse.cpp
  skia/gm/pathopsskpclip.cpp
  skia/gm/pathreverse.cpp
  skia/gm/pdf_never_embed.cpp
  skia/gm/perlinnoise.cpp
  skia/gm/perspshaders.cpp
  skia/gm/picture.cpp
  skia/gm/pictureimagefilter.cpp
  skia/gm/pictureimagegenerator.cpp
  skia/gm/pictureshader.cpp
  skia/gm/pictureshadercache.cpp
  skia/gm/pictureshadertile.cpp
  skia/gm/pixelsnap.cpp
  skia/gm/plus.cpp
  skia/gm/points.cpp
  skia/gm/poly2poly.cpp
  skia/gm/polygons.cpp
  skia/gm/quadpaths.cpp
  skia/gm/radial_gradient_precision.cpp
  skia/gm/readpixels.cpp
  skia/gm/recordopts.cpp
  skia/gm/rectangletexture.cpp
  skia/gm/rects.cpp
  skia/gm/repeated_bitmap.cpp
  skia/gm/resizeimagefilter.cpp
  skia/gm/reveal.cpp
  skia/gm/roundrects.cpp
  skia/gm/rrect.cpp
  skia/gm/rrectclipdrawpaint.cpp
  skia/gm/rrects.cpp
  skia/gm/samplerstress.cpp
  skia/gm/savelayer.cpp
  skia/gm/scaledstrokes.cpp
  skia/gm/scaledemoji.cpp
  skia/gm/shadermaskfilter.cpp
  skia/gm/shadertext.cpp
  skia/gm/shadertext2.cpp
  skia/gm/shadertext3.cpp
  skia/gm/shadows.cpp
  skia/gm/shadowutils.cpp
  skia/gm/shallowgradient.cpp
  skia/gm/shapes.cpp
  skia/gm/shapes_as_paths.cpp
  skia/gm/showmiplevels.cpp
  skia/gm/simpleaaclip.cpp
  skia/gm/simple_magnification.cpp
  skia/gm/simplerect.cpp
  skia/gm/skbug_257.cpp
  skia/gm/skbug_4868.cpp
  skia/gm/skbug_5321.cpp
  skia/gm/skbug1719.cpp
  skia/gm/smallarc.cpp
  skia/gm/smallpaths.cpp
  skia/gm/spritebitmap.cpp
  skia/gm/srcmode.cpp
  skia/gm/srgb.cpp
  skia/gm/tosrgb_colorfilter.cpp
  skia/gm/stlouisarch.cpp
  skia/gm/stringart.cpp
  skia/gm/stroke_rect_shader.cpp
  skia/gm/strokedlines.cpp
  skia/gm/strokefill.cpp
  skia/gm/strokerect.cpp
  skia/gm/strokerects.cpp
  skia/gm/strokes.cpp
  skia/gm/stroketext.cpp
  skia/gm/subsetshader.cpp
  skia/gm/surface.cpp
  skia/gm/tablecolorfilter.cpp
  skia/gm/tallstretchedbitmaps.cpp
  skia/gm/testgradient.cpp
  skia/gm/texdata.cpp
  skia/gm/textblob.cpp
  skia/gm/textblobblockreordering.cpp
  skia/gm/textblobcolortrans.cpp
  skia/gm/textblobgeometrychange.cpp
  skia/gm/textbloblooper.cpp
  skia/gm/textblobmixedsizes.cpp
  skia/gm/textblobrandomfont.cpp
  skia/gm/textblobshader.cpp
  skia/gm/textblobtransforms.cpp
  skia/gm/textblobuseaftergpufree.cpp
  skia/gm/texteffects.cpp
  skia/gm/text_scale_skew.cpp
  skia/gm/texturedomaineffect.cpp
  skia/gm/thinconcavepaths.cpp
  skia/gm/thinrects.cpp
  skia/gm/thinstrokedrects.cpp
  skia/gm/tiledscaledbitmap.cpp
  skia/gm/tileimagefilter.cpp
  skia/gm/tilemodes.cpp
  skia/gm/tilemodes_scaled.cpp
  skia/gm/tinybitmap.cpp
  skia/gm/tonalshadows.cpp
  skia/gm/transparency.cpp
  skia/gm/typeface.cpp
  skia/gm/variedtext.cpp
  skia/gm/vertices.cpp
  skia/gm/verttext.cpp
  skia/gm/verttext2.cpp
  skia/gm/verylargebitmap.cpp
  skia/gm/windowrectangles.cpp
  skia/gm/xfermodeimagefilter.cpp
  skia/gm/xfermodes.cpp
  skia/gm/xfermodes2.cpp
  skia/gm/xfermodes3.cpp
  skia/gm/yuvtorgbeffect.cpp
            )
target_include_directories(gm PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/
	 skia/gm/
      skia/include/private/
      skia/src/c/
      skia/src/codec/
      skia/src/core/
      skia/src/effects/
      skia/src/fonts/
      skia/src/image/
      skia/src/images/
      skia/src/lazy/
      skia/src/opts/
      skia/src/pathops/
      skia/src/pdf/
      skia/src/ports/
      skia/src/sfnt/
      skia/src/shaders/
      skia/src/shaders/gradients/
      skia/src/sksl/
      skia/src/utils/
      skia/src/utils/win/
      skia/src/xml/
      skia/third_party/gif/
      skia/src/gpu/
      skia/experimental/sksg/
      skia/experimental/sksg/effects/
      skia/experimental/sksg/geometry/
      skia/experimental/sksg/paint/
      skia/tools/flags/
      skia/tools/gpu/
      skia/include/android/
      skia/include/c/
      skia/include/codec/
      skia/include/config/
      skia/include/core/
      skia/include/effects/
      skia/include/encode/
      skia/include/gpu/
      skia/include/gpu/gl/
      skia/include/atlastext/
      skia/include/pathops/
      skia/include/ports/
      skia/include/svg/
      skia/include/utils/
      skia/include/utils/mac/
      skia/include/atlastext/
      skia/tools/
      skia/tools/debugger/
      skia/tools/fonts/
      skia/tools/timer/
      skia/tools/trace/
      skia/third_party/externals/jsoncpp/include/
	            )




#skia
add_library(skia STATIC
  skia/src/c/sk_paint.cpp
  skia/src/c/sk_surface.cpp
  skia/src/core/SkAAClip.cpp
  skia/src/core/SkAnnotation.cpp
  skia/src/core/SkAlphaRuns.cpp
  skia/src/core/SkATrace.cpp
  skia/src/core/SkAutoPixmapStorage.cpp
  skia/src/core/SkBBHFactory.cpp
  skia/src/core/SkBigPicture.cpp
  skia/src/core/SkBitmap.cpp
  skia/src/core/SkBitmapCache.cpp
  skia/src/core/SkBitmapController.cpp
  skia/src/core/SkBitmapDevice.cpp
  skia/src/core/SkBitmapProcState.cpp
  skia/src/core/SkBitmapProcState_matrixProcs.cpp
  skia/src/core/SkBitmapProvider.cpp
  skia/src/core/SkBlendMode.cpp
  skia/src/core/SkBlitMask_D32.cpp
  skia/src/core/SkBlitRow_D32.cpp
  skia/src/core/SkBlitter.cpp
  skia/src/core/SkBlitter_A8.cpp
  skia/src/core/SkBlitter_ARGB32.cpp
  skia/src/core/SkBlitter_RGB565.cpp
  skia/src/core/SkBlitter_Sprite.cpp
  skia/src/core/SkBlurImageFilter.cpp
  skia/src/core/SkBuffer.cpp
  skia/src/core/SkCachedData.cpp
  skia/src/core/SkCanvas.cpp
  skia/src/core/SkCanvasPriv.cpp
  skia/src/core/SkCoverageDelta.cpp
  skia/src/core/SkClipStack.cpp
  skia/src/core/SkClipStackDevice.cpp
  skia/src/core/SkColor.cpp
  skia/src/core/SkColorFilter.cpp
  skia/src/core/SkColorLookUpTable.cpp
  skia/src/core/SkColorMatrixFilterRowMajor255.cpp
  skia/src/core/SkColorSpace.cpp
  skia/src/core/SkColorSpace_A2B.cpp
  skia/src/core/SkColorSpace_New.cpp
  skia/src/core/SkColorSpace_XYZ.cpp
  skia/src/core/SkColorSpace_ICC.cpp
  skia/src/core/SkColorSpaceXform.cpp
  skia/src/core/SkColorSpaceXformCanvas.cpp
  skia/src/core/SkColorSpaceXformer.cpp
  skia/src/core/SkColorSpaceXform_A2B.cpp
  skia/src/core/SkColorTable.cpp
  skia/src/core/SkConvertPixels.cpp
  skia/src/core/SkCpu.cpp
  skia/src/core/SkCubicClipper.cpp
  skia/src/core/SkCubicMap.cpp
  skia/src/core/SkData.cpp
  skia/src/core/SkDataTable.cpp
  skia/src/core/SkDebug.cpp
  skia/src/core/SkDeferredDisplayList.cpp
  skia/src/core/SkDeferredDisplayListRecorder.cpp
  skia/src/core/SkDeque.cpp
  skia/src/core/SkDevice.cpp
  skia/src/core/SkDeviceLooper.cpp
  skia/src/core/SkDeviceProfile.cpp
  skia/src/lazy/SkDiscardableMemoryPool.cpp
  skia/src/core/SkDistanceFieldGen.cpp
  skia/src/core/SkDither.cpp
  skia/src/core/SkDocument.cpp
  skia/src/core/SkDraw.cpp
  skia/src/core/SkDraw_vertices.cpp
  skia/src/core/SkDrawable.cpp
  skia/src/core/SkDrawLooper.cpp
  skia/src/core/SkDrawShadowInfo.cpp
  skia/src/core/SkEdgeBuilder.cpp
  skia/src/core/SkEdgeClipper.cpp
  skia/src/core/SkExecutor.cpp
  skia/src/core/SkAnalyticEdge.cpp
  skia/src/core/SkFDot6Constants.cpp
  skia/src/core/SkEdge.cpp
  skia/src/core/SkArenaAlloc.cpp
  skia/src/core/SkGaussFilter.cpp
  skia/src/core/SkFlattenable.cpp
  skia/src/core/SkFont.cpp
  skia/src/core/SkFontLCDConfig.cpp
  skia/src/core/SkFontMgr.cpp
  skia/src/core/SkFontDescriptor.cpp
  skia/src/core/SkFontStream.cpp
  skia/src/core/SkGeometry.cpp
  skia/src/core/SkGlobalInitialization_core.cpp
  skia/src/core/SkGlyphCache.cpp
  skia/src/core/SkGpuBlurUtils.cpp
  skia/src/core/SkGraphics.cpp
  skia/src/core/SkHalf.cpp
  skia/src/core/SkICC.cpp
  skia/src/core/SkImageFilter.cpp
  skia/src/core/SkImageFilterCache.cpp
  skia/src/core/SkImageInfo.cpp
  skia/src/core/SkImageGenerator.cpp
  skia/src/core/SkLineClipper.cpp
  skia/src/core/SkLiteDL.cpp
  skia/src/core/SkLiteRecorder.cpp
  skia/src/core/SkLocalMatrixImageFilter.cpp
  skia/src/core/SkMD5.cpp
  skia/src/core/SkMallocPixelRef.cpp
  skia/src/core/SkMask.cpp
  skia/src/core/SkMaskBlurFilter.cpp
  skia/src/core/SkMaskCache.cpp
  skia/src/core/SkMaskFilter.cpp
  skia/src/core/SkMaskGamma.cpp
  skia/src/core/SkMath.cpp
  skia/src/core/SkMatrix.cpp
  skia/src/core/SkMatrix44.cpp
  skia/src/core/SkMatrixImageFilter.cpp
  skia/src/core/SkMetaData.cpp
  skia/src/core/SkMipMap.cpp
  skia/src/core/SkMiniRecorder.cpp
  skia/src/core/SkModeColorFilter.cpp
  skia/src/core/SkMultiPictureDraw.cpp
  skia/src/core/SkLatticeIter.cpp
  skia/src/core/SkOpts.cpp
  skia/src/core/SkOverdrawCanvas.cpp
  skia/src/core/SkPaint.cpp
  skia/src/core/SkPaintPriv.cpp
  skia/src/core/SkPath.cpp
  skia/src/core/SkPath_serial.cpp
  skia/src/core/SkPathEffect.cpp
  skia/src/core/SkPathMeasure.cpp
  skia/src/core/SkPathRef.cpp
  skia/src/core/SkPicture.cpp
  skia/src/core/SkPictureData.cpp
  skia/src/core/SkPictureFlat.cpp
  skia/src/core/SkPictureImageGenerator.cpp
  skia/src/core/SkPicturePlayback.cpp
  skia/src/core/SkPictureRecord.cpp
  skia/src/core/SkPictureRecorder.cpp
  skia/src/core/SkPixelRef.cpp
  skia/src/core/SkPixmap.cpp
  skia/src/core/SkPoint.cpp
  skia/src/core/SkPoint3.cpp
  skia/src/core/SkPtrRecorder.cpp
  skia/src/core/SkQuadClipper.cpp
  skia/src/core/SkRasterClip.cpp
  skia/src/core/SkRasterPipeline.cpp
  skia/src/core/SkRasterPipelineBlitter.cpp
  skia/src/core/SkReadBuffer.cpp
  skia/src/core/SkRecord.cpp
  skia/src/core/SkRecords.cpp
  skia/src/core/SkRecordDraw.cpp
  skia/src/core/SkRecordOpts.cpp
  skia/src/core/SkRecordedDrawable.cpp
  skia/src/core/SkRecorder.cpp
  skia/src/core/SkRect.cpp
  skia/src/core/SkRefDict.cpp
  skia/src/core/SkRegion.cpp
  skia/src/core/SkRegion_path.cpp
  skia/src/core/SkRemoteGlyphCache.cpp
  skia/src/core/SkResourceCache.cpp
  skia/src/core/SkRRect.cpp
  skia/src/core/SkRTree.cpp
  skia/src/core/SkRWBuffer.cpp
  skia/src/core/SkScalar.cpp
  skia/src/core/SkScalerContext.cpp
  skia/src/core/SkScan.cpp
  skia/src/core/SkScan_AAAPath.cpp
  skia/src/core/SkScan_DAAPath.cpp
  skia/src/core/SkScan_AntiPath.cpp
  skia/src/core/SkScan_Antihair.cpp
  skia/src/core/SkScan_Hairline.cpp
  skia/src/core/SkScan_Path.cpp
  skia/src/core/SkSemaphore.cpp
  skia/src/core/SkSharedMutex.cpp
  skia/src/core/SkSpecialImage.cpp
  skia/src/core/SkSpecialSurface.cpp
  skia/src/core/SkSpinlock.cpp
  skia/src/core/SkSpriteBlitter_ARGB32.cpp
  skia/src/core/SkSpriteBlitter_RGB565.cpp
  skia/src/core/SkStream.cpp
  skia/src/core/SkString.cpp
  skia/src/core/SkStringUtils.cpp
  skia/src/core/SkStroke.cpp
  skia/src/core/SkStrokeRec.cpp
  skia/src/core/SkStrokerPriv.cpp
  skia/src/core/SkSwizzle.cpp
  skia/src/core/SkSRGB.cpp
  skia/src/core/SkTaskGroup.cpp
  skia/src/core/SkTaskGroup2D.cpp
  skia/src/core/SkTextBlob.cpp
  skia/src/core/SkTime.cpp
  skia/src/core/SkThreadedBMPDevice.cpp
  skia/src/core/SkThreadID.cpp
  skia/src/core/SkTLS.cpp
  skia/src/core/SkTSearch.cpp
  skia/src/core/SkTypeface.cpp
  skia/src/core/SkTypeface_remote.cpp
  skia/src/core/SkTypefaceCache.cpp
  skia/src/core/SkUnPreMultiply.cpp
  skia/src/core/SkUtils.cpp
  skia/src/core/SkVertices.cpp
  skia/src/core/SkVertState.cpp
  skia/src/core/SkWriteBuffer.cpp
  skia/src/core/SkWriter32.cpp
  skia/src/core/SkXfermode.cpp
  skia/src/core/SkXfermodeInterpretation.cpp
  skia/src/core/SkYUVPlanesCache.cpp
  skia/src/image/SkImage.cpp
  skia/src/image/SkImage_Lazy.cpp
  skia/src/image/SkImage_Raster.cpp
  skia/src/image/SkSurface.cpp
  skia/src/image/SkSurface_Raster.cpp
  skia/src/pipe/SkPipeCanvas.cpp
  skia/src/pipe/SkPipeReader.cpp
  skia/src/shaders/SkBitmapProcShader.cpp
  skia/src/shaders/SkColorFilterShader.cpp
  skia/src/shaders/SkColorShader.cpp
  skia/src/shaders/SkComposeShader.cpp
  skia/src/shaders/SkImageShader.cpp
  skia/src/shaders/SkLocalMatrixShader.cpp
  skia/src/shaders/SkPictureShader.cpp
  skia/src/shaders/SkShader.cpp
  skia/src/pathops/SkAddIntersections.cpp
  skia/src/pathops/SkDConicLineIntersection.cpp
  skia/src/pathops/SkDCubicLineIntersection.cpp
  skia/src/pathops/SkDCubicToQuads.cpp
  skia/src/pathops/SkDLineIntersection.cpp
  skia/src/pathops/SkDQuadLineIntersection.cpp
  skia/src/pathops/SkIntersections.cpp
  skia/src/pathops/SkOpAngle.cpp
  skia/src/pathops/SkOpBuilder.cpp
  skia/src/pathops/SkOpCoincidence.cpp
  skia/src/pathops/SkOpContour.cpp
  skia/src/pathops/SkOpCubicHull.cpp
  skia/src/pathops/SkOpEdgeBuilder.cpp
  skia/src/pathops/SkOpSegment.cpp
  skia/src/pathops/SkOpSpan.cpp
  skia/src/pathops/SkPathOpsCommon.cpp
  skia/src/pathops/SkPathOpsConic.cpp
  skia/src/pathops/SkPathOpsCubic.cpp
  skia/src/pathops/SkPathOpsCurve.cpp
  skia/src/pathops/SkPathOpsDebug.cpp
  skia/src/pathops/SkPathOpsLine.cpp
  skia/src/pathops/SkPathOpsOp.cpp
  skia/src/pathops/SkPathOpsPoint.cpp
  skia/src/pathops/SkPathOpsQuad.cpp
  skia/src/pathops/SkPathOpsRect.cpp
  skia/src/pathops/SkPathOpsSimplify.cpp
  skia/src/pathops/SkPathOpsTSect.cpp
  skia/src/pathops/SkPathOpsTightBounds.cpp
  skia/src/pathops/SkPathOpsTypes.cpp
  skia/src/pathops/SkPathOpsWinding.cpp
  skia/src/pathops/SkPathWriter.cpp
  skia/src/pathops/SkReduceOrder.cpp
  skia/src/jumper/SkJumper.cpp
  skia/src/jumper/SkJumper_stages.cpp
  skia/src/jumper/SkJumper_stages_lowp.cpp
  skia/src/utils/SkBase64.cpp
  skia/src/utils/SkFrontBufferedStream.cpp
  skia/src/utils/SkCamera.cpp
  skia/src/utils/SkCanvasStack.cpp
  skia/src/utils/SkCanvasStateUtils.cpp
  skia/src/utils/SkDashPath.cpp
  skia/src/utils/SkDumpCanvas.cpp
  skia/src/utils/SkEventTracer.cpp
  skia/src/utils/SkFloatToDecimal.cpp
  skia/src/utils/SkInsetConvexPolygon.cpp
  skia/src/utils/SkInterpolator.cpp
  skia/src/utils/SkJSONWriter.cpp
  skia/src/utils/SkMatrix22.cpp
  skia/src/utils/SkMultiPictureDocument.cpp
  skia/src/utils/SkNWayCanvas.cpp
  skia/src/utils/SkNullCanvas.cpp
  skia/src/utils/SkOSPath.cpp
  skia/src/utils/SkPaintFilterCanvas.cpp
  skia/src/utils/SkParse.cpp
  skia/src/utils/SkParseColor.cpp
  skia/src/utils/SkParsePath.cpp
  skia/src/utils/SkPatchUtils.cpp
  skia/src/utils/SkShadowTessellator.cpp
  skia/src/utils/SkShadowUtils.cpp
  skia/src/utils/SkTextBox.cpp
  skia/src/utils/SkThreadUtils_pthread.cpp
  skia/src/utils/SkThreadUtils_win.cpp
  skia/src/utils/SkWhitelistTypefaces.cpp
  skia/src/utils/mac/SkCreateCGImageRef.cpp
  skia/src/utils/win/SkAutoCoInitialize.cpp
  skia/src/utils/win/SkDWrite.cpp
  skia/src/utils/win/SkDWriteFontFileStream.cpp
  skia/src/utils/win/SkDWriteGeometrySink.cpp
  skia/src/utils/win/SkHRESULT.cpp
  skia/src/utils/win/SkIStream.cpp
  skia/src/utils/win/SkWGL_win.cpp
  skia/src/xps/SkXPSDocument.cpp
  skia/src/xps/SkXPSDevice.cpp
  skia/src/android/SkAndroidFrameworkUtils.cpp
  skia/src/android/SkAnimatedImage.cpp
  skia/src/android/SkBitmapRegionCodec.cpp
  skia/src/android/SkBitmapRegionDecoder.cpp
  skia/src/codec/SkAndroidCodec.cpp
  skia/src/codec/SkBmpBaseCodec.cpp
  skia/src/codec/SkBmpCodec.cpp
  skia/src/codec/SkBmpMaskCodec.cpp
  skia/src/codec/SkBmpRLECodec.cpp
  skia/src/codec/SkBmpStandardCodec.cpp
  skia/src/codec/SkCodec.cpp
  skia/src/codec/SkCodecImageGenerator.cpp
  skia/src/codec/SkGifCodec.cpp
  skia/src/codec/SkMaskSwizzler.cpp
  skia/src/codec/SkMasks.cpp
  skia/src/codec/SkSampledCodec.cpp
  skia/src/codec/SkSampler.cpp
  skia/src/codec/SkStreamBuffer.cpp
  skia/src/codec/SkSwizzler.cpp
  skia/src/codec/SkWbmpCodec.cpp
  skia/src/images/SkImageEncoder.cpp
  skia/src/ports/SkDiscardableMemory_none.cpp
  skia/src/ports/SkImageGenerator_skia.cpp
  skia/src/ports/SkMemory_malloc.cpp
  skia/src/ports/SkOSFile_stdio.cpp
  skia/src/sfnt/SkOTTable_name.cpp
  skia/src/sfnt/SkOTUtils.cpp
  skia/src/utils/mac/SkStream_mac.cpp
  skia/third_party/gif/SkGifImageReader.cpp
  skia/src/ports/SkOSFile_posix.cpp
  skia/src/ports/SkOSLibrary_posix.cpp
  skia/src/ports/SkTLS_pthread.cpp
  skia/src/ports/SkDebug_android.cpp
    skia/src/opts/SkBitmapProcState_arm_neon.cpp
    skia/src/opts/SkBitmapProcState_matrixProcs_neon.cpp
    skia/src/opts/SkBitmapProcState_opts_none.cpp
    skia/src/opts/SkBlitMask_opts_arm.cpp
    skia/src/opts/SkBlitMask_opts_arm_neon.cpp
    skia/src/opts/SkBlitRow_opts_arm.cpp
    skia/src/opts/SkBlitRow_opts_arm_neon.cpp
    skia/src/opts/SkOpts_crc32.cpp
    #gpu
      skia/src/gpu/GrAuditTrail.cpp
      skia/src/gpu/GrBackendSurface.cpp
      skia/src/gpu/GrBackendTextureImageGenerator.cpp
      skia/src/gpu/GrAHardwareBufferImageGenerator.cpp
      skia/src/gpu/GrBitmapTextureMaker.cpp
      skia/src/gpu/GrBlend.cpp
      skia/src/gpu/GrBlurUtils.cpp
      skia/src/gpu/GrBuffer.cpp
      skia/src/gpu/GrBufferAllocPool.cpp
      skia/src/gpu/GrCaps.cpp
      skia/src/gpu/GrClipStackClip.cpp
      skia/src/gpu/GrColorSpaceInfo.cpp
      skia/src/gpu/GrColorSpaceXform.cpp
      skia/src/gpu/GrContext.cpp
      skia/src/gpu/GrDefaultGeoProcFactory.cpp
      skia/src/gpu/GrDistanceFieldGenFromVector.cpp
      skia/src/gpu/GrDrawingManager.cpp
      skia/src/gpu/GrDrawOpAtlas.cpp
      skia/src/gpu/GrDrawOpTest.cpp
      skia/src/gpu/GrFixedClip.cpp
      skia/src/gpu/GrFragmentProcessor.cpp
      skia/src/gpu/GrGpu.cpp
      skia/src/gpu/GrGpuCommandBuffer.cpp
      skia/src/gpu/GrGpuResource.cpp
      skia/src/gpu/GrGpuResourceRef.cpp
      skia/src/gpu/GrGpuFactory.cpp
      skia/src/gpu/GrImageTextureMaker.cpp
      skia/src/gpu/GrMemoryPool.cpp
      skia/src/gpu/GrOpFlushState.cpp
      skia/src/gpu/GrOpList.cpp
      skia/src/gpu/GrPaint.cpp
      skia/src/gpu/GrPath.cpp
      skia/src/gpu/GrPathProcessor.cpp
      skia/src/gpu/GrPathRange.cpp
      skia/src/gpu/GrPathRendererChain.cpp
      skia/src/gpu/GrPathRenderer.cpp
      skia/src/gpu/GrPathRendering.cpp
      skia/src/gpu/GrPathUtils.cpp
      skia/src/gpu/GrOnFlushResourceProvider.cpp
      skia/src/gpu/GrPipeline.cpp
      skia/src/gpu/GrPrimitiveProcessor.cpp
      skia/src/gpu/GrProcessorSet.cpp
      skia/src/gpu/GrProgramDesc.cpp
      skia/src/gpu/GrProcessor.cpp
      skia/src/gpu/GrProcessorAnalysis.cpp
      skia/src/gpu/GrProcessorUnitTest.cpp
      skia/src/gpu/GrProxyProvider.cpp
      skia/src/gpu/GrRectanizer_pow2.cpp
      skia/src/gpu/GrRectanizer_skyline.cpp
      skia/src/gpu/GrRenderTarget.cpp
      skia/src/gpu/GrRenderTargetProxy.cpp
      skia/src/gpu/GrReducedClip.cpp
      skia/src/gpu/GrRenderTargetContext.cpp
      skia/src/gpu/GrRenderTargetOpList.cpp
      skia/src/gpu/GrResourceAllocator.cpp
      skia/src/gpu/GrResourceCache.cpp
      skia/src/gpu/GrResourceProvider.cpp
      skia/src/gpu/GrShaderCaps.cpp
      skia/src/gpu/GrShape.cpp
      skia/src/gpu/GrStencilAttachment.cpp
      skia/src/gpu/GrStencilSettings.cpp
      skia/src/gpu/GrStyle.cpp
      skia/src/gpu/GrSurfaceProxyRef.cpp
      skia/src/gpu/GrTessellator.cpp
      skia/src/gpu/GrTextureOpList.cpp
      skia/src/gpu/GrTestUtils.cpp
      skia/src/gpu/GrShaderVar.cpp
      skia/src/gpu/GrSKSLPrettyPrint.cpp
      skia/src/gpu/GrSoftwarePathRenderer.cpp
      skia/src/gpu/GrSurface.cpp
      skia/src/gpu/GrSurfaceContext.cpp
      skia/src/gpu/GrSurfaceProxy.cpp
      skia/src/gpu/GrSWMaskHelper.cpp
      skia/src/gpu/GrTexture.cpp
      skia/src/gpu/GrTextureAdjuster.cpp
      skia/src/gpu/GrTextureContext.cpp
      skia/src/gpu/GrTextureMaker.cpp
      skia/src/gpu/GrTextureProducer.cpp
      skia/src/gpu/GrTextureProxy.cpp
      skia/src/gpu/GrTextureRenderTargetProxy.cpp
      skia/src/gpu/GrXferProcessor.cpp
      skia/src/gpu/GrYUVProvider.cpp
      skia/src/gpu/ops/GrAAConvexTessellator.cpp
      skia/src/gpu/ops/GrAAConvexPathRenderer.cpp
      skia/src/gpu/ops/GrAAFillRectOp.cpp
      skia/src/gpu/ops/GrAAHairLinePathRenderer.cpp
      skia/src/gpu/ops/GrAALinearizingConvexPathRenderer.cpp
      skia/src/gpu/ops/GrAAStrokeRectOp.cpp
      skia/src/gpu/ops/GrAtlasTextOp.cpp
      skia/src/gpu/ops/GrClearOp.cpp
      skia/src/gpu/ops/GrCopySurfaceOp.cpp
      skia/src/gpu/ops/GrDashLinePathRenderer.cpp
      skia/src/gpu/ops/GrDashOp.cpp
      skia/src/gpu/ops/GrDefaultPathRenderer.cpp
      skia/src/gpu/ops/GrDrawAtlasOp.cpp
      skia/src/gpu/ops/GrDrawPathOp.cpp
      skia/src/gpu/ops/GrDrawVerticesOp.cpp
      skia/src/gpu/ops/GrMeshDrawOp.cpp
      skia/src/gpu/ops/GrMSAAPathRenderer.cpp
      skia/src/gpu/ops/GrNonAAFillRectOp.cpp
      skia/src/gpu/ops/GrNonAAStrokeRectOp.cpp
      skia/src/gpu/ops/GrLatticeOp.cpp
      skia/src/gpu/ops/GrOp.cpp
      skia/src/gpu/ops/GrOvalOpFactory.cpp
      skia/src/gpu/ops/GrRegionOp.cpp
      skia/src/gpu/ops/GrSemaphoreOp.cpp
      skia/src/gpu/ops/GrShadowRRectOp.cpp
      skia/src/gpu/ops/GrSimpleMeshDrawOpHelper.cpp
      skia/src/gpu/ops/GrSmallPathRenderer.cpp
      skia/src/gpu/ops/GrStencilAndCoverPathRenderer.cpp
      skia/src/gpu/ops/GrStencilPathOp.cpp
      skia/src/gpu/ops/GrTessellatingPathRenderer.cpp
      skia/src/gpu/ops/GrTextureOp.cpp
      skia/src/gpu/ccpr/GrCCAtlas.cpp
      skia/src/gpu/ccpr/GrCCClipProcessor.cpp
      skia/src/gpu/ccpr/GrCCCoverageProcessor.cpp
      skia/src/gpu/ccpr/GrCCCoverageProcessor_GSImpl.cpp
      skia/src/gpu/ccpr/GrCCCoverageProcessor_VSImpl.cpp
      skia/src/gpu/ccpr/GrCCCubicShader.cpp
      skia/src/gpu/ccpr/GrCCGeometry.cpp
      skia/src/gpu/ccpr/GrCCPathParser.cpp
      skia/src/gpu/ccpr/GrCCPathProcessor.cpp
      skia/src/gpu/ccpr/GrCCQuadraticShader.cpp
      skia/src/gpu/ccpr/GrCCTriangleShader.cpp
      skia/src/gpu/ccpr/GrCoverageCountingPathRenderer.cpp
      skia/src/gpu/effects/GrAARectEffect.cpp
      skia/src/gpu/effects/GrArithmeticFP.cpp
      skia/src/gpu/effects/GrBlurredEdgeFragmentProcessor.cpp
      skia/src/gpu/effects/GrCircleEffect.cpp
      skia/src/gpu/effects/GrConfigConversionEffect.cpp
      skia/src/gpu/effects/GrConstColorProcessor.cpp
      skia/src/gpu/effects/GrCoverageSetOpXP.cpp
      skia/src/gpu/effects/GrCustomXfermode.cpp
      skia/src/gpu/effects/GrBezierEffect.cpp
      skia/src/gpu/effects/GrConvexPolyEffect.cpp
      skia/src/gpu/effects/GrBicubicEffect.cpp
      skia/src/gpu/effects/GrBitmapTextGeoProc.cpp
      skia/src/gpu/effects/GrDisableColorXP.cpp
      skia/src/gpu/effects/GrDistanceFieldGeoProc.cpp
      skia/src/gpu/effects/GrDitherEffect.cpp
      skia/src/gpu/effects/GrEllipseEffect.cpp
      skia/src/gpu/effects/GrGaussianConvolutionFragmentProcessor.cpp
      skia/src/gpu/effects/GrLumaColorFilterEffect.cpp
      skia/src/gpu/effects/GrMagnifierEffect.cpp
      skia/src/gpu/effects/GrMatrixConvolutionEffect.cpp
      skia/src/gpu/effects/GrNonlinearColorSpaceXformEffect.cpp
      skia/src/gpu/effects/GrOverdrawFragmentProcessor.cpp
      skia/src/gpu/effects/GrOvalEffect.cpp
      skia/src/gpu/effects/GrPorterDuffXferProcessor.cpp
      skia/src/gpu/effects/GrPremulInputFragmentProcessor.cpp
      skia/src/gpu/effects/GrRectBlurEffect.cpp
      skia/src/gpu/effects/GrRRectBlurEffect.cpp
      skia/src/gpu/effects/GrRRectEffect.cpp
      skia/src/gpu/effects/GrShadowGeoProc.cpp
      skia/src/gpu/effects/GrSimpleTextureEffect.cpp
      skia/src/gpu/effects/GrSRGBEffect.cpp
      skia/src/gpu/effects/GrTextureDomain.cpp
      skia/src/gpu/effects/GrTextureStripAtlas.cpp
      skia/src/gpu/effects/GrUnpremulInputFragmentProcessor.cpp
      skia/src/gpu/effects/GrXfermodeFragmentProcessor.cpp
      skia/src/gpu/effects/GrYUVtoRGBEffect.cpp
      skia/src/gpu/text/GrAtlasManager.cpp
      skia/src/gpu/text/GrAtlasTextBlob.cpp
      skia/src/gpu/text/GrAtlasTextBlobVertexRegenerator.cpp
      skia/src/gpu/text/GrAtlasTextContext.cpp
      skia/src/gpu/text/GrDistanceFieldAdjustTable.cpp
      skia/src/gpu/text/GrGlyphCache.cpp
      skia/src/gpu/text/GrTextBlobCache.cpp
      skia/src/gpu/text/GrTextUtils.cpp
      skia/src/gpu/gl/GrGLAssembleInterface.cpp
      skia/src/gpu/gl/GrGLBuffer.cpp
      skia/src/gpu/gl/GrGLCaps.cpp
      skia/src/gpu/gl/GrGLContext.cpp
      skia/src/gpu/gl/GrGLCreateNullInterface.cpp
      skia/src/gpu/gl/GrGLGLSL.cpp
      skia/src/gpu/gl/GrGLGpu.cpp
      skia/src/gpu/gl/GrGLGpuCommandBuffer.cpp
      skia/src/gpu/gl/GrGLGpuProgramCache.cpp
      skia/src/gpu/gl/GrGLExtensions.cpp
      skia/src/gpu/gl/GrGLInterface.cpp
      skia/src/gpu/gl/GrGLPath.cpp
      skia/src/gpu/gl/GrGLPathRange.cpp
      skia/src/gpu/gl/GrGLPathRendering.cpp
      skia/src/gpu/gl/GrGLProgram.cpp
      skia/src/gpu/gl/GrGLProgramDataManager.cpp
      skia/src/gpu/gl/GrGLRenderTarget.cpp
      skia/src/gpu/gl/GrGLSemaphore.cpp
      skia/src/gpu/gl/GrGLStencilAttachment.cpp
      skia/src/gpu/gl/GrGLTestInterface.cpp
      skia/src/gpu/gl/GrGLTexture.cpp
      skia/src/gpu/gl/GrGLTextureRenderTarget.cpp
      skia/src/gpu/gl/GrGLUtil.cpp
      skia/src/gpu/gl/GrGLUniformHandler.cpp
      skia/src/gpu/gl/GrGLVaryingHandler.cpp
      skia/src/gpu/gl/GrGLVertexArray.cpp
      skia/src/gpu/gl/builders/GrGLProgramBuilder.cpp
      skia/src/gpu/gl/builders/GrGLShaderStringBuilder.cpp
      skia/src/gpu/glsl/GrGLSL.cpp
      skia/src/gpu/glsl/GrGLSLBlend.cpp
      skia/src/gpu/glsl/GrGLSLFragmentProcessor.cpp
      skia/src/gpu/glsl/GrGLSLFragmentShaderBuilder.cpp
      skia/src/gpu/glsl/GrGLSLGeometryProcessor.cpp
      skia/src/gpu/glsl/GrGLSLPrimitiveProcessor.cpp
      skia/src/gpu/glsl/GrGLSLProgramBuilder.cpp
      skia/src/gpu/glsl/GrGLSLProgramDataManager.cpp
      skia/src/gpu/glsl/GrGLSLShaderBuilder.cpp
      skia/src/gpu/glsl/GrGLSLUtil.cpp
      skia/src/gpu/glsl/GrGLSLVarying.cpp
      skia/src/gpu/glsl/GrGLSLVertexGeoBuilder.cpp
      skia/src/gpu/glsl/GrGLSLXferProcessor.cpp
      skia/src/gpu/mock/GrMockGpu.cpp
      skia/src/gpu/SkGpuDevice.cpp
      skia/src/gpu/SkGpuDevice_drawTexture.cpp
      skia/src/gpu/SkGr.cpp
      skia/src/image/SkImage_Gpu.cpp
      skia/src/image/SkSurface_Gpu.cpp
      skia/src/sksl/SkSLCFGGenerator.cpp
      skia/src/sksl/SkSLCompiler.cpp
      skia/src/sksl/SkSLCPPCodeGenerator.cpp
      skia/src/sksl/SkSLGLSLCodeGenerator.cpp
      skia/src/sksl/SkSLHCodeGenerator.cpp
      skia/src/sksl/SkSLIRGenerator.cpp
      skia/src/sksl/SkSLLexer.cpp
      skia/src/sksl/SkSLLayoutLexer.cpp
      skia/src/sksl/SkSLMetalCodeGenerator.cpp
      skia/src/sksl/SkSLParser.cpp
      skia/src/sksl/SkSLSPIRVCodeGenerator.cpp
      skia/src/sksl/SkSLString.cpp
      skia/src/sksl/SkSLUtil.cpp
      skia/src/sksl/ir/SkSLSymbolTable.cpp
      skia/src/sksl/ir/SkSLSetting.cpp
      skia/src/sksl/ir/SkSLType.cpp
      skia/src/gpu/gl/android/GrGLMakeNativeInterface_android.cpp
      skia/src/atlastext/SkAtlasTextContext.cpp
      skia/src/atlastext/SkAtlasTextTarget.cpp
      skia/src/atlastext/SkInternalAtlasTextContext.cpp

      #effects
        skia/src/c/sk_effects.cpp
        skia/src/effects/GrCircleBlurFragmentProcessor.cpp
        skia/src/effects/GrAlphaThresholdFragmentProcessor.cpp
        skia/src/effects/Sk1DPathEffect.cpp
        skia/src/effects/Sk2DPathEffect.cpp
        skia/src/effects/SkAlphaThresholdFilter.cpp
        skia/src/effects/SkArithmeticImageFilter.cpp
        skia/src/effects/SkBlurMask.cpp
        skia/src/effects/SkBlurMaskFilter.cpp
        skia/src/effects/SkColorFilterImageFilter.cpp
        skia/src/effects/SkColorMatrix.cpp
        skia/src/effects/SkColorMatrixFilter.cpp
        skia/src/effects/SkComposeImageFilter.cpp
        skia/src/effects/SkCornerPathEffect.cpp
        skia/src/effects/SkDashPathEffect.cpp
        skia/src/effects/SkDiscretePathEffect.cpp
        skia/src/effects/SkDisplacementMapEffect.cpp
        skia/src/effects/SkDropShadowImageFilter.cpp
        skia/src/effects/SkEmbossMask.cpp
        skia/src/effects/SkEmbossMaskFilter.cpp
        skia/src/effects/SkImageSource.cpp
        skia/src/effects/SkHighContrastFilter.cpp
        skia/src/effects/SkLayerDrawLooper.cpp
        skia/src/effects/SkLightingImageFilter.cpp
        skia/src/effects/SkLumaColorFilter.cpp
        skia/src/effects/SkMagnifierImageFilter.cpp
        skia/src/effects/SkMatrixConvolutionImageFilter.cpp
        skia/src/effects/SkMergeImageFilter.cpp
        skia/src/effects/SkMorphologyImageFilter.cpp
        skia/src/effects/SkOffsetImageFilter.cpp
        skia/src/effects/SkOverdrawColorFilter.cpp
        skia/src/effects/SkPackBits.cpp
        skia/src/effects/SkPaintFlagsDrawFilter.cpp
        skia/src/effects/SkPaintImageFilter.cpp
        skia/src/effects/SkPictureImageFilter.cpp
        skia/src/effects/SkRRectsGaussianEdgeMaskFilter.cpp
        skia/src/effects/SkShaderMaskFilter.cpp
        skia/src/effects/SkTableColorFilter.cpp
        skia/src/effects/SkTableMaskFilter.cpp
        skia/src/effects/SkTileImageFilter.cpp
        skia/src/effects/SkToSRGBColorFilter.cpp
        skia/src/effects/SkXfermodeImageFilter.cpp
        skia/src/shaders/SkPerlinNoiseShader.cpp
        skia/src/shaders/gradients/Sk4fGradientBase.cpp
        skia/src/shaders/gradients/Sk4fLinearGradient.cpp
        skia/src/shaders/gradients/SkGradientBitmapCache.cpp
        skia/src/shaders/gradients/SkGradientShader.cpp
        skia/src/shaders/gradients/SkLinearGradient.cpp
        skia/src/shaders/gradients/SkRadialGradient.cpp
        skia/src/shaders/gradients/SkTwoPointConicalGradient.cpp
        skia/src/shaders/gradients/SkTwoPointConicalGradient_gpu.cpp
        skia/src/shaders/gradients/SkSweepGradient.cpp
        skia/src/ports/SkGlobalInitialization_default.cpp
        #font
          skia/src/ports/SkFontMgr_android.cpp
          skia/src/ports/SkFontMgr_android_factory.cpp
          skia/src/ports/SkFontMgr_android_parser.cpp
          skia/src/ports/SkFontHost_FreeType.cpp
          skia/src/ports/SkFontHost_FreeType_common.cpp
          #xml
          skia/src/xml/SkXMLParser.cpp
          skia/src/xml/SkXMLWriter.cpp
          skia/third_party/externals/expat/lib/xmlparse.c
          skia/third_party/externals/expat/lib/xmlrole.c
          skia/third_party/externals/expat/lib/xmltok.c
            )

target_include_directories(skia PRIVATE
	            ${CMAKE_CURRENT_SOURCE_DIR}/
 skia/include/android/
  skia/include/c/
  skia/include/codec/
  skia/include/config/
  skia/include/core/
  skia/include/effects/
  skia/include/encode/
  skia/include/gpu/
  skia/include/gpu/gl/
  skia/include/atlastext/
  skia/include/pathops/
  skia/include/ports/
  skia/include/svg/
  skia/include/utils/
  skia/include/utils/mac/
  skia/include/atlastext/
  skia/include/private/
  skia/src/c/
  skia/src/codec/
  skia/src/core/
  skia/src/effects/
  skia/src/fonts/
  skia/src/image/
  skia/src/images/
  skia/src/lazy/
  skia/src/opts/
  skia/src/pathops/
  skia/src/pdf/
  skia/src/ports/
  skia/src/sfnt/
  skia/src/shaders/
  skia/src/shaders/gradients/
  skia/src/sksl/
  skia/src/utils/
  skia/src/utils/win/
  skia/src/xml/
  skia/src/gpu/
  skia/third_party/gif/
  skia/third_party/externals/expat/lib/
  skia/third_party/externals/freetype/include/
  /program/ndk/sources/android/cpufeatures/
            )

#//////////////
add_library(freetype2 STATIC
  skia/third_party/externals/freetype/src/autofit/autofit.c
  skia/third_party/externals/freetype/src/base/ftbase.c
  skia/third_party/externals/freetype/src/base/ftbbox.c
  skia/third_party/externals/freetype/src/base/ftbitmap.c
  skia/third_party/externals/freetype/src/base/ftdebug.c
  skia/third_party/externals/freetype/src/base/ftfntfmt.c
  skia/third_party/externals/freetype/src/base/ftfstype.c
  skia/third_party/externals/freetype/src/base/ftgasp.c
  skia/third_party/externals/freetype/src/base/ftglyph.c
  skia/third_party/externals/freetype/src/base/ftinit.c
  skia/third_party/externals/freetype/src/base/ftlcdfil.c
  skia/third_party/externals/freetype/src/base/ftmm.c
  skia/third_party/externals/freetype/src/base/ftpatent.c
  skia/third_party/externals/freetype/src/base/ftstroke.c
  skia/third_party/externals/freetype/src/base/ftsynth.c
  skia/third_party/externals/freetype/src/base/ftsystem.c
  skia/third_party/externals/freetype/src/base/fttype1.c
  skia/third_party/externals/freetype/src/base/ftwinfnt.c
  skia/third_party/externals/freetype/src/cff/cff.c
  skia/third_party/externals/freetype/src/gzip/ftgzip.c
  skia/third_party/externals/freetype/src/pshinter/pshinter.c
  skia/third_party/externals/freetype/src/psnames/psnames.c
  skia/third_party/externals/freetype/src/raster/raster.c
  skia/third_party/externals/freetype/src/sfnt/sfnt.c
  skia/third_party/externals/freetype/src/smooth/smooth.c
  skia/third_party/externals/freetype/src/truetype/truetype.c
  skia/third_party/externals/freetype/src/winfonts/winfnt.c
  skia/third_party/externals/freetype/src/cid/type1cid.c
  skia/third_party/externals/freetype/src/psaux/psaux.c
  skia/third_party/externals/freetype/src/type1/type1.c
  skia/third_party/externals/freetype/src/type42/type42.c
  skia/third_party/externals/freetype/src/pcf/pcf.c
  skia/third_party/externals/freetype/src/bdf/bdf.c
  skia/third_party/externals/freetype/src/pfr/pfr.c
  skia/third_party/externals/freetype/src/lzw/ftzopen.c
  skia/third_party/externals/freetype/src/lzw/ftlzw.c
)

target_include_directories(freetype2 PRIVATE
  skia/third_party/freetype/
  skia/third_party/externals/freetype/include/
  skia/third_party/libpng/
  skia/third_party/externals/libpng/
)

#//////////////

add_library(png STATIC
  skia/third_party/externals/libpng/png.c
  skia/third_party/externals/libpng/pngerror.c
  skia/third_party/externals/libpng/pngget.c
  skia/third_party/externals/libpng/pngmem.c
  skia/third_party/externals/libpng/pngpread.c
  skia/third_party/externals/libpng/pngread.c
  skia/third_party/externals/libpng/pngrio.c
  skia/third_party/externals/libpng/pngrtran.c
  skia/third_party/externals/libpng/pngrutil.c
  skia/third_party/externals/libpng/pngset.c
  skia/third_party/externals/libpng/pngtrans.c
  skia/third_party/externals/libpng/pngwio.c
  skia/third_party/externals/libpng/pngwrite.c
  skia/third_party/externals/libpng/pngwtran.c
  skia/third_party/externals/libpng/pngwutil.c
  skia/third_party/externals/libpng/intel/filter_sse2_intrinsics.c
  skia/third_party/externals/libpng/intel/intel_init.c
        )

target_include_directories(png PRIVATE
      skia/third_party/libpng/
      skia/third_party/externals/libpng/
      skia/third_party/externals/zlib/
)

#  jpeg
add_library(jpeg STATIC
       skia/third_party/externals/libjpeg-turbo/jaricom.c
       skia/third_party/externals/libjpeg-turbo/jcapimin.c
       skia/third_party/externals/libjpeg-turbo/jcapistd.c
       skia/third_party/externals/libjpeg-turbo/jcarith.c
       skia/third_party/externals/libjpeg-turbo/jccoefct.c
       skia/third_party/externals/libjpeg-turbo/jccolor.c
       skia/third_party/externals/libjpeg-turbo/jcdctmgr.c
       skia/third_party/externals/libjpeg-turbo/jchuff.c
       skia/third_party/externals/libjpeg-turbo/jcinit.c
       skia/third_party/externals/libjpeg-turbo/jcmainct.c
       skia/third_party/externals/libjpeg-turbo/jcmarker.c
       skia/third_party/externals/libjpeg-turbo/jcmaster.c
       skia/third_party/externals/libjpeg-turbo/jcomapi.c
       skia/third_party/externals/libjpeg-turbo/jcparam.c
       skia/third_party/externals/libjpeg-turbo/jcphuff.c
       skia/third_party/externals/libjpeg-turbo/jcprepct.c
       skia/third_party/externals/libjpeg-turbo/jcsample.c
       skia/third_party/externals/libjpeg-turbo/jdapimin.c
       skia/third_party/externals/libjpeg-turbo/jdapistd.c
       skia/third_party/externals/libjpeg-turbo/jdarith.c
       skia/third_party/externals/libjpeg-turbo/jdcoefct.c
       skia/third_party/externals/libjpeg-turbo/jdcolor.c
       skia/third_party/externals/libjpeg-turbo/jddctmgr.c
       skia/third_party/externals/libjpeg-turbo/jdhuff.c
       skia/third_party/externals/libjpeg-turbo/jdinput.c
       skia/third_party/externals/libjpeg-turbo/jdmainct.c
       skia/third_party/externals/libjpeg-turbo/jdmarker.c
       skia/third_party/externals/libjpeg-turbo/jdmaster.c
       skia/third_party/externals/libjpeg-turbo/jdmerge.c
       skia/third_party/externals/libjpeg-turbo/jdphuff.c
       skia/third_party/externals/libjpeg-turbo/jdpostct.c
       skia/third_party/externals/libjpeg-turbo/jdsample.c
       skia/third_party/externals/libjpeg-turbo/jerror.c
       skia/third_party/externals/libjpeg-turbo/jfdctflt.c
       skia/third_party/externals/libjpeg-turbo/jfdctfst.c
       skia/third_party/externals/libjpeg-turbo/jfdctint.c
       skia/third_party/externals/libjpeg-turbo/jidctflt.c
       skia/third_party/externals/libjpeg-turbo/jidctfst.c
       skia/third_party/externals/libjpeg-turbo/jidctint.c
       skia/third_party/externals/libjpeg-turbo/jidctred.c
       skia/third_party/externals/libjpeg-turbo/jmemmgr.c
       skia/third_party/externals/libjpeg-turbo/jmemnobs.c
       skia/third_party/externals/libjpeg-turbo/jquant1.c
       skia/third_party/externals/libjpeg-turbo/jquant2.c
       skia/third_party/externals/libjpeg-turbo/jutils.c
       skia/third_party/externals/libjpeg-turbo/simd/jsimd_arm64.c
    )

target_include_directories(jpeg PRIVATE
     skia/third_party/libjpeg-turbo/
     skia/third_party/externals/libjpeg-turbo/
     skia/third_party/externals/zlib
)

#zlib
add_library(zlib STATIC
  skia/third_party/externals/zlib/adler32.c
  skia/third_party/externals/zlib/compress.c
  skia/third_party/externals/zlib/crc32.c
  skia/third_party/externals/zlib/deflate.c
  skia/third_party/externals/zlib/gzclose.c
  skia/third_party/externals/zlib/gzlib.c
  skia/third_party/externals/zlib/gzread.c
  skia/third_party/externals/zlib/gzwrite.c
  skia/third_party/externals/zlib/infback.c
  skia/third_party/externals/zlib/inffast.c
  skia/third_party/externals/zlib/inflate.c
  skia/third_party/externals/zlib/inftrees.c
  skia/third_party/externals/zlib/trees.c
  skia/third_party/externals/zlib/uncompr.c
  skia/third_party/externals/zlib/zutil.c
   /mywork/github/skia/third_party/externals/zlib/simd_stub.c
    )
    
target_include_directories(zlib PRIVATE
   skia/third_party/externals/zlib/
)

#runtimecanvas


 add_library(runtimecanvas SHARED
                libskia/src/main/cpp/gl_code.cpp
                libskia/src/main/cpp/GlesUtil.cpp
                libskia/src/main/cpp/SkiaApp.cpp
                libskia/src/main/cpp/JniShell.cpp
                libskia/src/main/cpp/StdC.cpp
                skia/third_party/externals/zlib/adler32.c
                skia/third_party/externals/zlib/compress.c
                skia/third_party/externals/zlib/crc32.c
                skia/third_party/externals/zlib/deflate.c
                skia/third_party/externals/zlib/gzclose.c
                skia/third_party/externals/zlib/gzlib.c
                skia/third_party/externals/zlib/gzread.c
                skia/third_party/externals/zlib/gzwrite.c
                skia/third_party/externals/zlib/infback.c
                skia/third_party/externals/zlib/inflate.c
                skia/third_party/externals/zlib/inftrees.c
                skia/third_party/externals/zlib/inffast.c
                skia/third_party/externals/zlib/trees.c
                skia/third_party/externals/zlib/uncompr.c
                skia/third_party/externals/zlib/zutil.c
            )

 target_include_directories(runtimecanvas PRIVATE
                       skia/include/android/
                        skia/include/c/
                        skia/include/codec/
                        skia/include/config/
                        skia/include/core/
                        skia/include/effects/
                        skia/include/encode/
                        skia/include/gpu/
                        skia/include/gpu/gl/
                        skia/include/atlastext/
                        skia/include/pathops/
                        skia/include/ports/
                        skia/include/svg/
                        skia/include/utils/
                        skia/include/utils/mac/
                        skia/include/atlastext/
                        skia/include/private/
                        skia/src/c/
                        skia/src/codec/
                        skia/src/core/
                        skia/src/effects/
                        skia/src/fonts/
                        skia/src/image/
                        skia/src/images/
                        skia/src/lazy/
                        skia/src/opts/
                        skia/src/pathops/
                        skia/src/pdf/
                        skia/src/ports/
                        skia/src/sfnt/
                        skia/src/shaders/
                        skia/src/shaders/gradients/
                        skia/src/sksl/
                        skia/src/utils/
                        skia/src/utils/win/
                        skia/src/xml/
                        skia/third_party/gif/
                        skia/src/gpu/
                        skia/third_party/externals/expat/lib/
                        skia/third_party/libjpeg-turbo/
                        skia/third_party/externals/libjpeg-turbo/
                        /program/ndk/sources/android/cpufeatures/

                      )


target_link_libraries(runtimecanvas
                    log
                    EGL
                    GLESv2
                    android
                    zlib
                    skia
                    freetype2
                    gm
                    png
                    jpeg
                    )
